# customer-satisfaction

./: .gitignore  README.md  app.py  pyproject.toml  survey.html
app/: app.py  results.html  survey.html  test.csv
app/static/: script.js  style.css
app/templates/: index.html
config/: ipa.json
notebook/: benchmark.ipynb  ipa.ipynb
